feat: create documentation to endpoint forgot password and reset
